<resources>
    <string name="app_name">My App portfolio</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="football_scores">Scores App</string>
    <string name="library">library app</string>
    <string name="build_it_bigger">build it bigger</string>
    <string name="xyz_reader">xyz reader</string>
    <string name="capstone_my_own_app">capstone:my own app</string>
    <string name="my_nanodegree_apps">my nanodegree apps</string>
    <string name="nothing">nothing</string>
    <string name="this_button_will_launch">this button will launch %1$s</string>
</resources>
