<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/my_app_container"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xyz.demj.myappportfolio.MainActivity">

    <TextView
        android:textSize="24sp"
        android:gravity="center_horizontal|center_vertical"
        android:textAllCaps="true"
        android:text="@string/my_nanodegree_apps"
        android:layout_width="match_parent"
        android:layout_height="96dp"/>
    <android.support.v7.widget.AppCompatButton
        android:textAllCaps="true"
        android:id="@+id/spotify_streamer"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        app:backgroundTint="@color/orange"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/football_scores"
        android:textAllCaps="true"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/football_scores"
        app:backgroundTint="@color/orange"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/library"
        android:textAllCaps="true"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/library"
        app:backgroundTint="@color/orange"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/build_it_bigger"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:textAllCaps="true"
        app:backgroundTint="@color/orange"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/xyz_reader"
        android:textAllCaps="true"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        app:backgroundTint="@color/orange"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/capstone_my_own_app"
        android:textAllCaps="true"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/capstone_my_own_app"
        android:textColor="@android:color/white"
        app:backgroundTint="#880E4F"/>
</LinearLayout>
